# PlaneSweepLib

./: .gitignore  CMakeLists.txt  Readme.txt  runFisheyePlanesweepTestsLinux.sh  runFisheyePlanesweepTestsWindows.bat  runPinholePlanesweepTestsLinux.sh  runPinholePlanesweepTestsWindows.bat
data/fisheyeCamera/left/: calib.txt  images.txt  system_poses.txt
data/fisheyeCamera/right/: calib.txt  images.txt  system_poses.txt
data/pinholeCamera/niederdorf1/: K.txt  ba-points3d-0.wrl  images.txt  model-0-cams.txt  model-0-points.txt
data/pinholeCamera/niederdorf2/: ba-points3d-0.wrl  images.txt  model-0-cams.txt  model-0-points.txt
data/pinholeCamera/niederdorf3/: ba-points3d-0.wrl  images.txt  model-0-cams.txt  model-0-points.txt
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt  cudaPlanesweepMAPTk.cpp
src/PSL/: CMakeLists.txt
src/PSL/psl_base/: cameraMatrix.cpp  cameraMatrix.h  colorMapJet.cpp  common.h  configFile.cpp  depthMap.cpp  depthMap.h  exception.h  fishEyeCameraMatrix.cpp  fishEyeCameraMatrix.h  fishEyeDepthMap.cpp  fishEyeDepthMap.h  grid.cpp  grid.h
src/PSL/psl_cudaBase/: cudaCommon.h  cudaFishEyeImageProcessor.cpp  cudaFishEyeImageProcessor.cu  cudaFishEyeImageProcessor.h  deviceBuffer.cpp  deviceBuffer.cu  deviceImage.cpp  deviceImage.cu
src/PSL/psl_io/: ioTools.cpp  ioTools.h
src/PSL/psl_stereo/: cudaFishEyePlaneSweep.cpp  cudaFishEyePlaneSweep.cu  cudaFishEyePlaneSweep.h  cudaPlaneSweep.cpp  cudaPlaneSweep.cu  cudaPlaneSweep.h
src/PSLTests/: CMakeLists.txt  fisheyePlanesweepTest.cpp  pinholePlanesweepTest.cpp
